--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     // Function to fetch weather data
     function fetchWeather(lat, lon, callback) {
-        var url1 = `http://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&appid=${apiKey}&units=metric`;
+        var url1 = `https://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&appid=${apiKey}&units=metric`;
         var url2 = `https://api.openweathermap.org/data/2.5/forecast?lat=${lat}&lon=${lon}&appid=${apiKey}&units=metric`;
 
         // Fetch data from both APIs using Promise.all
